--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Mon Portfolio
 url: "https://ethanpiacenti.github.io"
-description: >- # this means to ignore newlines until "baseurl:"
-"Bonjour ! Bienvenu sur mon Portfolion, je m'appelle Ethan Piacenti"
+description: >-  "Bonjour ! Bienvenu sur mon Portfolion, je m'appelle Ethan Piacenti"
 twitter_username: username
 github_username: Sygfrid
 minimal_mistakes_skin: default
