--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Mon Portfolio
 url: "https://ethanpiacenti.github.io"
-description: >  "Bonjour ! Bienvenu sur mon Portfolion, je m'appelle Ethan Piacenti"
+description: "Bonjour ! Bienvenu sur mon Portfolion, je m'appelle Ethan Piacenti"
 twitter_username: username
 github_username: Sygfrid
 minimal_mistakes_skin: default
