--- a/_config.yml
+++ b/_config.yml
@@ -102,6 +102,14 @@ defaults:
     values:
       layout: single
       author_profile: true
+      nav: main
+  - scope:
+      path: "en"
+      type: pages
+    values:
+      nav: en
+      layout: single
+      author_profile: true
 
 category_archive:
   type: liquid
