--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,4 @@ main:
   - title: "A Propos"
     url: /contact/
   - title: "🇬🇧"
-    url: /home/
-    
-
+    url: https://sygfrid.github.io/ethanpiacenti-en.github.io/
