--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ author:
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/ethan.pci"
     - label: "Linkedin"
-      icon: "afb fa-fw fa-linkedin"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/ethan-piacenti/"
 
 footer:
@@ -81,7 +81,7 @@ footer:
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/ethan.pci"
     - label: "Linkedin"
-      icon: "afb fa-fw fa-linkedin"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/ethan-piacenti/"
 
 defaults:
